<resources>
    <string name="app_name">TeamPlayerHR</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user">New User</string>
    <string name="demo_request">Demo Request</string>
    <string name="participant">Individual</string>
    <string name="orgnization">Organization</string>
    <string name="do_you_have_an_im_enter_it_here">Do you have an \'IM\' Enter it here</string>
    <string name="submit">Submit</string>
    <string name="please_check_internet">Please check internet</string>
    <string name="please_wait">Please wait</string>
    <string name="Something_went_worng">Something went wrong</string>
    <string name="image_picker_provider_authority_suffix" translatable="false">.imagepicker.provider</string>
    <string name="title_choose_image_provider">Choose</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>
    <string name="permission_gallery_denied">
        <![CDATA[Storage permission is needed to pick gallery image. Please allow storage permission from Settings > Permissions.]]></string>
    <string name="permission_camera_extended_denied">
        <![CDATA[Camera and Storage permissions are needed to take a picture. Please allow both the requested permissions from Settings > Permissions.]]></string>
    <string name="permission_camera_denied">
        <![CDATA[Storage permission is needed to take a picture. Please allow storage permission from Settings > Permissions.]]></string>
    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="error_camera_app_not_found">Camera app not found</string>
    <string name="full_name">Enter First Name</string>
    <string name="enter_no_of_question">Enter Number Of Questionnaires</string>
    <string name="enter_title">Enter Title</string>
    <string name="last_name1">Enter Last name</string>
    <string name="enter_phone">Enter Phone no.</string>
    <string name="enter_address">Select Address</string>
    <string name="enter_user_role">Enter User Role</string>
    <string name="enter_number_employee">Enter Number Of Emplayee</string>
    <string name="select_hours">Select Hours</string>
    <string name="select_minet">Select Min</string>
    <string name="enter_mark">Enter Landmark</string>
    <string name="select_sector">Select Sector</string>
    <string name="select_occupation">Select Occupation</string>
    <string name="select_country">Select Country</string>
    <string name="enter_organization">Enter Organization</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="enter_your_role">Select Your Role</string>
    <string name="enter_no_of_employees">Select Your Number Of Employees</string>
    <string name="enter_zip">Enter Zip/PostCode</string>
    <string name="enter_valid_email">Please enter atleast email id</string>
    <string name="password_and_confirm_pass_should_same">password and confirm pass should same</string>
    <string name="select_image">Select Image</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?Sign UP</string>
    <string name="welcome_user">Welcome User</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Enter email</string>
    <string name="skip">SKIP</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_password_length">Password should be minimum 6 digit</string>
    <string name="enter_subject">Enter our ubject</string>
    <string name="enter_message">Enter youre message</string>
    <string name="agree_to_terms_conditions_and_privacy_policy"><![CDATA[Agree to Terms&Conditions and Privacy Policy]]></string>
    <string name="forget_password">Forgot Password</string>
    <string name="enter_your_registered_email_address_and_we_ll_send_you_a_link_to_reset_your_password">Enter your registered email address and we\'ll send you a link to reset your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="sector">Sector</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="request_a_demo">Request a Demo</string>
    <string name="company_name">Company name</string>
    <string name="phone_num">Phone No.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email_new">Email</string>
    <string name="profession">Profession</string>
    <string name="invalid_Url">Invalid Url</string>
    <string name="user_can">User can select file from internal storage</string>
    <string name="address">Address</string>
    <string name="select_profession">Select Profession</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="how_it_works">Company Subscription</string>
    <string name="compare_im_title">Compare IM Intrinsic Matrix</string>
    <string name="subscription_title">Subscription</string>
    <string name="purchase_his">Purchase Plan</string>
    <string name="brief_ques_title">Purchase</string>
    <string name="purchase1">Purchase</string>
    <string name="vision_technology">Vision and Technology</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="news_">News</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="signup">SignUp</string>
    <string name="demo">Demo</string>
    <string name="faq">Faq</string>
    <string name="question_title">Questionnaire</string>
    <string name="profile">Profile</string>
    <string name="calculator">Calculator</string>
    <string name="accept_all_privacy_privacy"><![CDATA[Accept all Privacy & privacy]]></string>
    <string name="what_are_the_benefits">What are the benefits?</string>
    <string name="employee_productivity">Employee Productivity</string>
    <string name="how_we_are_different">How we are different</string>
    <string name="reach_out_get_in_touch">Reach Out, Get in Touch</string>
    <string name="what_s_is_group">What\'s is group?</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_technology">Our Technology</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your Message</string>
    <string name="focus_on_recrutment_tools_artical_360_magazine">Focus on Recrutment Tools artical 360 Magazine</string>
    <string name="im_id">IM ID</string>
    <string name="name">Name</string>
    <string name="decrease">Decrease the 20% to 30% lost productivity that companies suffer due to unhappy and poorly engaged employees</string>
    <string name="team_assignments">Team Assignments</string>
    <string name="savings_of_up_to_20_when_better_aligned_teams_are_operating_on_agile_initiatives">Savings of up to 20% when better aligned teams are operating on agile initiatives</string>
    <string name="manage_focus">Management Focus</string>
    <string name="management_focus_issue">Management Focus - A decrease of up to 20% of manager time focused on HR issues</string>
    <string name="staff_hiring">Staff Hiring</string>
    <string name="building_teams_an_increase_of_up_to_20_in_employee_productivity">Building Teams - An increase of up to 20% in employee productivity</string>
    <string name="augmenting_teams_up_to_30_reduction_in_the_number_and_cost_of_bad_hir">Augmenting Teams - Up to 30% reduction in the number and cost of bad hir</string>
    <string name="teamplayerhr_is_not_a_psychometric_test">TeamPlayerHR is not a psychometric test.</string>
    <string name="teamplay">TeamPlayerHR patented technology quickly assesses how individuals will interact with each other and tells its users whether individuals will work together effectively by assessing their cultural compatibility so they can create high performing teams.</string>
    <string name="search">Search...</string>
    <string name="put_the_results_graph_in_photo_area">Put the results graph in photo area .</string>
    <string name="the_team_playerhr_is_simple_to_complete_you_will_be_asked_a_series_of_multiple_choice_questions_select_an_answer_you_should_answer_as_fast_as_you_can_because_questions_are_time_based_and_will_fade_out_after_a_period_of_time">The Team PlayerHR is simple to complete. You will be asked a series of multiple choice questions, select an answer. You should answer as fast as you can because questions are time based and will fade out after a period of time.</string>
    <string name="just_be_as_honest_as_you_can_be_and_trust_your_first_response">Just be as honest as you can be and trust your first response.</string>
    <string name="once_completed_you_ll_be_issued_an_im_intrinsic_matrix_to_be_compare_to_other_im_s_for_compatibly">Once completed you\'ll be issued an IM Intrinsic Matrix. To be compare to other IM\'s for compatibly.</string>
    <string name="we_want_to_make_people_happy_they_spend_most_of_their_waking_hours_in_their_place_of_work_those_should_be_good_hours_compatibility_among_teams_produces_happier_workers_higher_productivity_and_a_stronger_bottom_line_for_employers_the_real_bottom_line_is_that_everyone_wins_with_teamplayerhr">We want to make people happy. They spend most of their waking hours in their place of work; those should be good hours. Compatibility among teams produces happier workers, higher productivity, and a stronger bottom line for employers. The real bottom line is that everyone wins with TeamPlayerHR.</string>
    <string name="scientifically">Scientifically developed, consistent results designed by behavioural psychologists, the TeamPlayerHR solution statistically records how each participant perceives, interprets and approaches common workplace situations. TeamPlayerHR adds scientific objectivity to the team assignment and selection process because all participants are rated and compared by the same standardised measurements.</string>
    <string name="participants_profile">Participants Profile</string>
    <string name="purchase_brief_questionnaires">Purchase App Questionnaires</string>
    <string name="what_benefits">Value Calculator</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="demo_in_login">Request Demo</string>
    <string name="confrim_password">confrim password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="state">State</string>
    <string-array name="occupation">
        <item>Occupation</item>
        <item>System Engineer</item>
    </string-array>
    <string name="road_landmark">Road Landmark</string>
    <string name="update_profile">Update Profile</string>
    <string name="buy_1">Buy 1 Questionaire at $0.99</string>
    <string name="buy_5">Buy 5 Questionaire at $4.99</string>
    <string name="buy_10">Buy 10 Questionaire at $9.99</string>
    <string name="buy_15">Buy 15 Questionaire at $14.99</string>
    <string name="buy_25">Buy 25 Questionaire at $24.99</string>
    <string name="buy_50">Buy 50 Questionaire at $49.99</string>
    <string name="buy_75">Buy 75 Questionaire at $74.99</string>
    <string name="buy_100">Buy 100 Questionaire at $99.99</string>
</resources>