<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:background="@color/full_transparent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"

        android:layout_alignParentBottom="true"
        android:background="@drawable/rac_rounded"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.cts.teamplayer.customui.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:text="Select Questionaire"
                android:textAlignment="center"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>


        <com.cts.teamplayer.customui.CustomTextView
            android:id="@+id/tvBuy1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textAlignment="center"
            android:textColor="@color/bt_text_blue"
            android:text="@string/buy_1"
            android:textSize="@dimen/_12sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />
        <com.cts.teamplayer.customui.CustomTextView
            android:id="@+id/tvBuy5"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/bt_text_blue"
            android:textAlignment="center"
            android:text="@string/buy_5"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />

        <com.cts.teamplayer.customui.CustomTextView
            android:id="@+id/tvBuy10"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/bt_text_blue"
            android:textAlignment="center"
            android:text="@string/buy_10"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />
        <com.cts.teamplayer.customui.CustomTextView
            android:id="@+id/tvBuy15"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/bt_text_blue"
            android:textAlignment="center"
            android:text="@string/buy_15"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />
        <com.cts.teamplayer.customui.CustomTextView
            android:id="@+id/tvBuy25"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/bt_text_blue"
            android:textAlignment="center"
            android:text="@string/buy_25"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:visibility="visible"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            /><com.cts.teamplayer.customui.CustomTextView
            android:id="@+id/tvBuy50"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/bt_text_blue"
            android:textAlignment="center"
            android:text="@string/buy_50"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:visibility="visible"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />
        <com.cts.teamplayer.customui.CustomTextView
            android:id="@+id/tvBuy75"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/bt_text_blue"
            android:textAlignment="center"
            android:text="@string/buy_75"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:visibility="visible"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />
        <com.cts.teamplayer.customui.CustomTextView
            android:id="@+id/tvBuy100"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/bt_text_blue"
            android:textAlignment="center"
            android:text="@string/buy_100"
            android:textSize="@dimen/_11sdp"
            />
        <View
            android:visibility="visible"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/light_grey"
            />
        <com.cts.teamplayer.customui.CustomTextView
            android:visibility="visible"
            android:id="@+id/tv_dismiss"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/bt_text_blue"
            android:textAlignment="center"
            android:text="Dismiss"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
</RelativeLayout>