<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/whit_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/light_blue"
        >
        <ImageView
            android:id="@+id/iv_back_profile"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/back"
            />
        <com.cts.teamplayer.customui.CustomTextviewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/update_profile"
            android:textSize="@dimen/_13sdp"
            />
        <ImageView
            android:visibility="gone"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/notification"
            />


    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:orientation="vertical"
            >
            <com.cts.teamplayer.customui.CustomTextviewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"
                android:text="@string/first_name"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/rounded_doted_btn"
                >
                <com.cts.teamplayer.customui.CustomEditText
                    android:id="@+id/edit_first_name_profile"
                    android:layout_toRightOf="@+id/iv_user_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/full_name"
                    android:textColorHint="@color/light_grey_new"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    />

            </RelativeLayout>
            <com.cts.teamplayer.customui.CustomTextviewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:text="@string/last_name"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/rounded_doted_btn"
                >
                <com.cts.teamplayer.customui.CustomEditText
                    android:id="@+id/edit_last_name_profile"
                    android:layout_toRightOf="@+id/iv_user_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/company_name"
                    android:textColorHint="@color/light_grey_new"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    />

            </RelativeLayout>
            <com.cts.teamplayer.customui.CustomTextviewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:text="@string/phone"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/rounded_doted_btn"
                >
                <com.cts.teamplayer.customui.CustomEditText
                    android:id="@+id/edit_phone_num_update"
                    android:layout_toRightOf="@+id/iv_user_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@null"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:hint="@string/phone_num"
                    android:textColorHint="@color/light_grey_new"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    />

            </RelativeLayout>
            <com.cts.teamplayer.customui.CustomTextviewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:text="@string/email"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/rounded_doted_btn"
                >
                <com.cts.teamplayer.customui.CustomTextView
                    android:id="@+id/tv_email_update"
                    android:layout_toRightOf="@+id/iv_user_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:hint="@string/phone_num"
                    android:textColorHint="@color/light_grey_new"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    />
            </RelativeLayout>
            <com.cts.teamplayer.customui.CustomTextviewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:text="@string/address"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/rounded_doted_btn"
                >
                <com.cts.teamplayer.customui.CustomTextView
                    android:id="@+id/tv_address_update"
                    android:layout_toRightOf="@+id/iv_user_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/phone_num"
                    android:textColorHint="@color/light_grey_new"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10sdp"
                    />
            </RelativeLayout>
            <com.cts.teamplayer.customui.CustomTextviewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:text="@string/profession"
                />
            <RelativeLayout
                android:id="@+id/rl_profession_open_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/rounded_doted_btn"
                >

                <com.cts.teamplayer.customui.CustomTextView
                    android:id="@+id/tv_profession_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profession"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey_new"
                    android:textSize="@dimen/_10sdp" />
                <ImageView
                    android:id="@+id/iv_profession"
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/down"
                    />
            </RelativeLayout>
            <com.cts.teamplayer.customui.CustomButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:background="@color/light_blue"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>